[package]
name = "arbitrage_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.100"
arc-swap = "1.7.1"
async-trait = "0.1.89"
base64 = "0.22.1"
derive-new = "0.7.0"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
